# academic_projects

Ascii/: pom.xml
Ascii/src/main/java/controller/: Application.java
Ascii/src/main/java/model/: AsciiPaint.java  Circle.java  Drawing.java  Line.java  Pair.java  Point.java  Rectangle.java  Square.java
Ascii/src/main/java/vue/: AsciiVue.java
Ascii/src/test/java/: AsciiTest.java
BatchCooking/: .gitignore  greeter-type.js  hide.css  index.html  jquery-test.js  package-lock.json  package.json  readme.md
BatchCooking/components/: calendar.html  cards.html  planning.html  recipe.html  shopping-list.html
BatchCooking/img/: lasagnes.avif
BatchCooking/scripts/: helpers-type.js  index.js  navigation.js
BatchCooking/style/: button.css  calendar.css  cards.css  common.css  planning.css  recipe.css  shopping-list.css
BatchCooking/style/img/: mur-beton-marron-vecteur-rayures_53876-143109.avif
Disneyland Paris/: index.html  index.js  setup.js  style.css
Parcs-g60736/: .env.example  README.md
Parcs-g60736/app/Http/Controllers/: ParkController.php  RideController.php
Parcs-g60736/app/Models/: Park.php  Ride.php  Type.php
Parcs-g60736/database/migrations/: 2024_06_07_063214_add_description_to_rides.php
Parcs-g60736/database/sql/: parkdb.sql
Parcs-g60736/public/css/: style.css
Parcs-g60736/resources/views/: canevas.blade.php  index.blade.php
Parcs-g60736/routes/: web.php
STIB/StibRide/: pom.xml
STIB/StibRide/data/: STATIONS_NL.sql  stib.db  stib.db.sql
STIB/StibRide/src/main/java/: App.java
Sorting/: pom.xml
Sorting/src/main/resources/: sort.fxml
Tetris/: .gitignore  README.md
Tetris/Tetris/: CMakeLists.txt  Doxyfile
Tetris/Tetris/console/: CMakeLists.txt  controller.cpp  controller.h  main.cpp  vue.cpp  vue.h
Tetris/Tetris/doc/html/: menudata.js
Tetris/Tetris/gui/: CMakeLists.txt  Playbuttonhandler.cpp  controller.cpp  controller.h  main.cpp  playbuttonhandler.h  playview.cpp  playview.h  playview.ui  welcomeview.cpp  welcomeview.h  welcomeview.ui
Tetris/Tetris/metier/: CMakeLists.txt  bag.cpp  bag.h  brick.cpp  brick.h  defaultBrick.cpp  defaultBricks.h  direction.cpp  direction.h  game.cpp  game.h  gamestate.h  gametimer.cpp  gametimer.h  main.cpp  plate.cpp  plate.h  position.h  timeUnits.cpp  timeUnits.h
Tetris/Tetris/metier/observer/: observable.h  observer.h
Tetris/Tetris/tests/: CMakeLists.txt  bagTest.hpp  brickTest.hpp  gameTest.hpp  main.cpp  plateTest.hpp
ThreeInLine/: InLine.java
Travel-g60736/app/Http/Controllers/: CityController.php
Travel-g60736/app/Models/: City.php  Flight.php  Search.php
Travel-g60736/config/: auth.php
Travel-g60736/resources/views/: index.blade.php  searches.blade.php
TuringMachine/: pom.xml
TuringMachine/src/main/java/: module-info.java
TuringMachine/src/main/resources/: known_problems.csv
bmr/: pom.xml
bmr/src/main/java/: module-info.java
g60736-qwirkle/: pom.xml
g60736-qwirkle/src/main/java/: App.java
webg4-juin2024-refait/Travel-g60736/app/Models/: Tuser.php
webg4-juin2024-refait/Travel-g60736/database/migrations/: 2024_08_03_182339_create_search_table.php
webg4-juin2024-refait/Travel-g60736/public/css/: style.css
webg4-juin2024-refait/Travel-g60736/resources/views/: canevas.blade.php  flights.blade.php
webg4-juin2024-refait/Travel-g60736/routes/: api.php  web.php
(+181 files in other folders)
